[Q4] Add endpoints for resolving Players by ID or by page.
