# 04-tennis-player/server/routes.go
@@ -30,6 +30,8 @@ func (s *Server) InitRoutes() {
 
 	// Players
 	s.router.HandleFunc("/players", s.PlayerHandler.HandleCreate).Methods("POST")
+	s.router.HandleFunc("/players/{id}", s.PlayerHandler.HandleResolveByID).Methods("GET")
+	s.router.HandleFunc("/players/", s.PlayerHandler.HandleResolvePage).Methods("GET")
 	s.router.HandleFunc("/players/addBall", s.PlayerHandler.HandleAddBall).Methods("POST")
 
 	http.Handle("/", s.router)
